Fix 'Stay up to date' wrapping text
Add margin left to force heading to wrap under itself

--- a/app/assets/stylesheets/views/_transition-landing-page.scss
+++ b/app/assets/stylesheets/views/_transition-landing-page.scss
@@ -109,6 +109,7 @@ $red: #E61E32;
 
 .landing-page__email-title {
   margin-bottom: govuk-spacing(2);
+  margin-left: govuk-spacing(5);
 }
 
 .landing-page__divide {
